--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: Arial, Helvetica, sans-serif;
+  background-color:lightpink}
+
 
 h2{
-  color:#ffcee9e7;
+  color:white;
   text-align:centre;
 }
 
