--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
 body {font-family: Arial, Helvetica, sans-serif;
   background-color:lightpink}
-  
+
+  .button {
+    background-color: rgb(77, 74, 74);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
   .dark-mode {
     background-color: black;
     color: white;
   }
+
 
 h2{
   color:white;
